--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://bootcamp:Bootcamp_44@cluster0.znljpki.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=bootcamp
+spring.data.mongodb.uri = ${DB_URL}
+spring.data.mongodb.database=${DB_USERNAME}
