--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Microservice that manages bank clients</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.host.url>http://localhost:9002</sonar.host.url>
+		<sonar.login>sqp_e98ccf7f5d0b2121973efc018f4f42751ea0c412</sonar.login>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -99,6 +101,11 @@
 					<failsOnError>true</failsOnError>
 					<linkXRef>false</linkXRef>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.9.1.2184</version>
 			</plugin>
 		</plugins>
 	</build>
